Didn't do much...

--- a/HELPSMobileFrontEnd/Resources/layout/Main.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/Main.axml
@@ -5,8 +5,19 @@
     android:layout_height="fill_parent"
     android:minWidth="25px"
     android:minHeight="25px">
+    <Button
+        android:text="Get data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnGetData" />
+    <TextView
+        android:text="Placeholder for data"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lblData" />
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/mylistview" />
+        android:id="@+id/lvPageLayout" />
 </LinearLayout>
