--- a/HELPSMobileFrontEnd/Resources/layout/Main.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/Main.axml
@@ -16,6 +16,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lblData" />
+    <Button
+        android:text="Go to Class List"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnNavigateClassList" />
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
