--- a/HELPSMobileFrontEnd/Resources/layout/Main.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/Main.axml
@@ -13,8 +13,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/tableLayout1">
         <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="*">
+            android:id="@+id/tableRow1">
             <FrameLayout
                 android:minWidth="25px"
                 android:minHeight="25px"
