--- a/HELPSMobileFrontEnd/Resources/layout/ListSessions.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/ListSessions.axml
@@ -10,5 +10,6 @@
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/lvClasses" />
+        android:id="@+id/lvClasses"
+        ItemsSource="{x:Static local:App.myListOfEmployeeObjects}" />
 </LinearLayout>
