--- a/HELPSMobileFrontEnd/Resources/layout/ListSessions.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/ListSessions.axml
@@ -5,6 +5,11 @@
     android:layout_height="fill_parent"
     android:minWidth="25px"
     android:minHeight="25px">
+    <Button
+        android:text="Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnCount" />
     <ListView
         android:minWidth="25px"
         android:minHeight="25px"
