Lots of changes...

--- a/HELPSMobileFrontEnd/Resources/layout/Login.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/Login.axml
@@ -7,48 +7,65 @@
     android:minHeight="25px"
     android:background="#EEEEEE">
     <ImageView
-        android:src="@android:drawable/ic_menu_gallery"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/imgLogo" />
+        android:id="@+id/imgHELPSLogo" />
     <TextView
+        android:id="@+id/lblLogin"
         android:text="Login"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
-        android:layout_height="78.8dp"
-        android:id="@+id/txtLogin"
+        android:layout_height="wrap_content"
         android:textColor="@android:color/holo_blue_dark"
         android:textStyle="bold"
+        android:textSize="30px"
+        android:layout_margin="20dp"
         android:gravity="center"
         android:autoText="true" />
-    <EditText
-        android:inputType="textPersonName"
+    <TableLayout
+        android:id="@+id/tlLogin"
         android:layout_width="match_parent"
-        android:layout_height="78.8dp"
-        android:id="@+id/txtUsername"
-        android:text="Student ID"
-        android:textColor="@android:color/holo_blue_light"
-        android:layout_marginRight="50dp"
-        android:layout_marginLeft="50dp"
-        android:background="#FFFFFF" />
-    <EditText
-        android:inputType="textPersonName"
-        android:layout_width="match_parent"
-        android:layout_height="78.8dp"
-        android:id="@+id/txtPassword"
-        android:text="Password"
-        android:textColor="@android:color/holo_blue_light"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:background="#FFFFFF"
-        android:layout_marginTop="20dp" />
+        android:layout_height="wrap_content"
+        android:stretchColumns="1"
+        android:layout_margin="5dp">
+        <TableRow
+            android:id="@+id/trStudentID"
+            android:layout_marginBottom="5dp">
+            <TextView
+                android:id="@+id/lblStudentID"
+                android:text="Student ID:"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_column="0"
+                android:textColor="@android:color/black"
+                android:paddingRight="5dp" />
+            <EditText
+                android:id="@+id/tbStudentID"
+                android:inputType="number"
+                android:textColor="@android:color/holo_blue_light"
+                android:background="#FFFFFF"
+                android:layout_column="1" />
+        </TableRow>
+        <TableRow
+            android:id="@+id/trPassword">
+            <TextView
+                android:id="@+id/lblPassword"
+                android:text="Password:"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_column="0"
+                android:textColor="@android:color/black"
+                android:paddingRight="5dp" />
+            <EditText
+                android:id="@+id/tbPassword"
+                android:inputType="textPassword"
+                android:textColor="@android:color/holo_blue_light"
+                android:background="#FFFFFF"
+                android:layout_column="1" />
+        </TableRow>
+    </TableLayout>
     <Button
+        android:id="@+id/btnLogin"
         android:text="Sign into UTS: HELPS"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#E53935"
-        android:id="@+id/btnLogin"
         android:textStyle="bold"
-        android:textColor="#FFFFFF"
-        android:layout_marginTop="160dp" />
+        android:textColor="#FFFFFF" />
 </LinearLayout>
