--- a/HELPSMobileFrontEnd/Resources/layout/BookingList.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/BookingList.axml
@@ -5,8 +5,16 @@
     android:layout_height="fill_parent"
     android:minWidth="25px"
     android:minHeight="25px">
+    <Button
+        android:text="Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnCount" />
     <ListView
+        android:minWidth="25px"
+        android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/lvClasses" />
+        android:id="@+id/bookinglist"
+        ItemsSource="{x:Static local:App.myListOfEmployeeObjects}" />
 </LinearLayout>
