--- a/HELPSMobileFrontEnd/Resources/layout/MainMenu.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/MainMenu.axml
@@ -1,125 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:p1="http://schemas.android.com/apk/res/android"
-    p1:layout_width="match_parent"
-    p1:layout_height="match_parent"
-    p1:id="@+id/tableLayout1"
-    p1:stretchColumns="*"
-    p1:background="#EEEEEE">
-    <TableRow
-        p1:id="@+id/tableRow1">
-        <TableLayout
-            p1:minWidth="25px"
-            p1:minHeight="25px"
-            p1:layout_column="0"
-            p1:id="@+id/tableLayout2"
-            p1:layout_span="2"
-            p1:background="#FFFFFF"
-            p1:layout_margin="10px"
-            p1:padding="10px"
-            p1:stretchColumns="1">
-            <TableRow
-                p1:id="@+id/tableRow4">
-                <TextView
-                    p1:text="Next Session:"
-                    p1:textAppearance="?android:attr/textAppearanceLarge"
-                    p1:textColor="#000000"
-                    p1:layout_span="3"
-                    p1:layout_column="0"
-                    p1:paddingBottom="10px"
-                    p1:id="@+id/textView11" />
-                <TextView
-                    p1:minWidth="30px"
-                    p1:minHeight="30px"
-                    p1:id="@+id/textView15" />
-                <TextView
-                    p1:minWidth="30px"
-                    p1:minHeight="30px"
-                    p1:id="@+id/textView16" />
-            </TableRow>
-            <TableRow
-                p1:id="@+id/tableRow5">
-                <TextView
-                    p1:text="Some HELPS Class that doesnt help..."
-                    p1:textAppearance="?android:attr/textAppearanceMedium"
-                    p1:textColor="#000000"
-                    p1:layout_column="0"
-                    p1:layout_span="3"
-                    p1:layout_marginBottom="10px"
-                    p1:id="@+id/textView12" />
-            </TableRow>
-            <TableRow
-                p1:id="@+id/tableRow6">
-                <TextView
-                    p1:text="11:00am - 12:00pm"
-                    p1:textAppearance="?android:attr/textAppearanceMedium"
-                    p1:textColor="#000000"
-                    p1:layout_column="0"
-                    p1:id="@+id/textView13" />
-                <TextView
-                    p1:minWidth="30px"
-                    p1:minHeight="30px"
-                    p1:layout_column="1"
-                    p1:id="@+id/textView17" />
-                <TextView
-                    p1:text="CB11.05.404"
-                    p1:textAppearance="?android:attr/textAppearanceMedium"
-                    p1:textColor="#000000"
-                    p1:layout_column="2"
-                    p1:id="@+id/textView14" />
-            </TableRow>
-        </TableLayout>
-    </TableRow>
-    <TableRow
-        p1:id="@+id/tableRow2"
+<LinearLayout xmlns:p1="http://schemas.android.com/apk/res/android"
+    p1:orientation="vertical"
+    p1:layout_width="fill_parent"
+    p1:layout_height="fill_parent"
+    p1:background="#EEEEEE"
+    p1:id="llPageRoot">
+    <TableLayout
+        p1:id="@+id/tlBackgroundBorder"
+        p1:layout_width="wrap_content"
+        p1:layout_height="wrap_content"
+        p1:stretchColumns="*"
+        p1:layout_margin="5dp">
+        <TableRow
+            p1:id="@+id/rowBackground"
+            p1:layout_width="wrap_content"
+            p1:background="#ff7d7d7d"
+            p1:layout_height="wrap_content"
+            p1:layout_gravity="center">
+            <TableLayout
+                p1:id="@+id/tlNextSession"
+                style="@style/TableLayoutInfo"
+                p1:background="#ffffffff"
+                p1:layout_column="0"
+                p1:layout_width="wrap_content">
+                <TableRow
+                    p1:id="@+id/rowNextSession">
+                    <TextView
+                        p1:text="Next Session:"
+                        p1:textAppearance="?android:attr/textAppearanceLarge"
+                        p1:textColor="#000000"
+                        p1:layout_span="2"
+                        p1:layout_column="0"
+                        p1:paddingBottom="10px"
+                        p1:id="@+id/txtNextSession" />
+                </TableRow>
+                <TableRow
+                    p1:id="@+id/rowDescription">
+                    <TextView
+                        p1:text="Some HELPS Class that doesnt help..."
+                        p1:textAppearance="?android:attr/textAppearanceMedium"
+                        p1:textColor="#000000"
+                        p1:layout_column="0"
+                        p1:layout_span="3"
+                        p1:layout_marginBottom="10px"
+                        p1:id="@+id/txtDescription" />
+                </TableRow>
+                <TableRow
+                    p1:id="@+id/rowTimeRoom">
+                    <TextView
+                        p1:text="11:00am - 12:00pm"
+                        p1:textAppearance="?android:attr/textAppearanceMedium"
+                        p1:textColor="#000000"
+                        p1:layout_column="0"
+                        p1:id="@+id/txtTime" />
+                    <TextView
+                        p1:text="CB11.05.404"
+                        p1:textAppearance="?android:attr/textAppearanceMedium"
+                        p1:textColor="#000000"
+                        p1:layout_column="1"
+                        p1:paddingLeft="50dp"
+                        p1:id="@+id/txtRoom" />
+                </TableRow>
+            </TableLayout>
+        </TableRow>
+    </TableLayout>
+    <TableLayout
         p1:minWidth="25px"
-        p1:minHeight="25px">
-        <Button
-            p1:id="@+id/btnMakeBooking"
-            p1:text="Make Booking"
-            p1:layout_column="0"
-            p1:layout_margin="20px"
-            p1:background="#E53935"
-            p1:minHeight="250px" />
-        <Button
-            p1:id="@+id/btnViewBooking"
-            p1:text="View Booking"
-            p1:layout_column="1"
-            p1:minHeight="250px"
-            p1:background="#E53935"
-            p1:layout_margin="20px" />
-    </TableRow>
-    <TableRow
-        p1:id="@+id/tableRow3">
-        <Button
-            p1:id="@+id/btnSearch"
-            p1:text="Search"
-            p1:layout_column="0"
-            p1:minHeight="250px"
-            p1:background="#E53935"
-            p1:layout_margin="20px" />
-        <Button
-            p1:id="@+id/btnHelp"
-            p1:text="Help"
-            p1:layout_column="1"
-            p1:minHeight="250px"
-            p1:background="#E53935"
-            p1:layout_margin="20px" />
-    </TableRow>
-    <TableRow
-        p1:id="@+id/tableRow7">
-        <Button
-            p1:id="@+id/btnProfile"
-            p1:text="Profile"
-            p1:layout_column="0"
-            p1:minHeight="250px"
-            p1:background="#E53935"
-            p1:layout_margin="20px" />
-        <Button
-            p1:id="@+id/btnLogout"
-            p1:text="Logout"
-            p1:layout_column="1"
-            p1:minHeight="250px"
-            p1:background="#E53935"
-            p1:layout_margin="20px" />
-    </TableRow>
-</TableLayout>
+        p1:minHeight="25px"
+        p1:layout_width="match_parent"
+        p1:layout_height="wrap_content"
+        p1:id="@+id/tlButtons">
+        <TableRow
+            p1:id="@+id/rowButtons1"
+            p1:minWidth="25px"
+            p1:minHeight="25px">
+            <Button
+                p1:id="@+id/btnMakeBooking"
+                p1:text="Make Booking"
+                p1:layout_column="0"
+                style="@style/MainButton" />
+            <Button
+                p1:id="@+id/btnViewBooking"
+                p1:text="View Booking"
+                p1:layout_column="1"
+                style="@style/MainButton" />
+        </TableRow>
+        <TableRow
+            p1:id="@+id/rowButtons2">
+            <Button
+                p1:id="@+id/btnSearch"
+                p1:text="Search"
+                p1:layout_column="0"
+                style="@style/MainButton" />
+            <Button
+                p1:id="@+id/btnHelp"
+                p1:text="Help"
+                p1:layout_column="1"
+                style="@style/MainButton" />
+        </TableRow>
+        <TableRow
+            p1:id="@+id/rowButtons3">
+            <Button
+                p1:id="@+id/btnProfile"
+                p1:text="Profile"
+                p1:layout_column="0"
+                style="@style/MainButton" />
+            <Button
+                p1:id="@+id/btnLogout"
+                p1:text="Logout"
+                p1:layout_column="1"
+                style="@style/MainButton" />
+        </TableRow>
+    </TableLayout>
+</LinearLayout>
