--- a/HELPSMobileFrontEnd/Resources/layout/ViewBookings.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/ViewBookings.axml
@@ -5,10 +5,13 @@
     android:layout_height="match_parent"
     android:minWidth="25px"
     android:minHeight="25px">
-    <FrameLayout
-        android:minWidth="25px"
-        android:minHeight="25px"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/flTabs" />
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
+    <FrameLayout
+        android:id="@+id/flTabs"
+        android:layout_weight="2"
+        android:layout_width="match_parent"
+        android:layout_height="0px" />
 </LinearLayout>
