--- a/HELPSMobileFrontEnd/Resources/layout/ViewBookings.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/ViewBookings.axml
@@ -8,7 +8,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray" />
+        android:background="#E53935" />
     <FrameLayout
         android:id="@+id/flTabs"
         android:layout_weight="2"
