changes to tabs and viewbookings

--- a/HELPSMobileFrontEnd/Resources/layout/CurrentBookings.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/CurrentBookings.axml
@@ -2,14 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:minWidth="25px"
-    android:minHeight="25px">
-    <TextView
-        android:text="Current"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
+    android:layout_height="fill_parent">
+    <ExpandableListView
+        android:id="@+id/elvCurrentBookings"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView1"
-        android:textColor="@android:color/black" />
+        android:layout_marginLeft="2dip"
+        android:layout_marginRight="2dip"
+        android:layout_marginTop="5dip"
+        android:layout_marginBottom="5dip" />
 </LinearLayout>
