--- a/HELPSMobileFrontEnd/Resources/layout/ViewBookingFragmentLayout.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/ViewBookingFragmentLayout.axml
@@ -6,7 +6,9 @@
     <HELPSMobileFrontEnd.SlidingTabScrollView
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:layout_marginTop="-10dip" />
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
