--- a/HELPSMobileFrontEnd/Resources/layout/ListControl_Group.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/ListControl_Group.axml
@@ -5,19 +5,17 @@
     android:layout_height="fill_parent"
     android:minWidth="25px"
     android:minHeight="25px"
-    android:background="#bdbdbd">
+    android:background="#ff909090">
     <TextView
-        android:text="Medium Text"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/txtLarge"
-        android:layout_marginLeft="42.0dp"
+        android:text="Question"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#ff909090"
+        android:layout_marginLeft="35dp"
         android:layout_marginRight="10dp"
-        android:background="#bdbdbd"
-        android:layout_marginTop="10.0dp"
-        android:layout_marginBottom="6.7dp"
-        android:textColor="#000000"
-        android:shadowColor="#fff9ea14"
-        android:gravity="center_vertical" />
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
+        android:textColor="#FFFFFF" />
 </LinearLayout>
