--- a/HELPSMobileFrontEnd/Resources/layout/PastBookings.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/PastBookings.axml
@@ -3,13 +3,27 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:minWidth="25px"
-    android:minHeight="25px">
-    <TextView
-        android:text="Past"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
+    android:background="#EEEEEE">
+    <ExpandableListView
+        android:id="@+id/elvPastBookings"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView1"
-        android:textColor="@android:color/black" />
+        android:layout_marginLeft="2dip"
+        android:layout_marginRight="2dip"
+        android:layout_marginTop="5dip"
+        android:layout_marginBottom="5dip" />
+    <FrameLayout
+        android:id="@+id/flNoPastBookings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tvNoPastBookings"
+            android:text="No Past Bookings"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:gravity="center_horizontal"
+            android:layout_margin="30dip" />
+    </FrameLayout>
 </LinearLayout>
