--- a/HELPSMobileFrontEnd/Resources/layout/Profile.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/Profile.axml
@@ -1,32 +1,234 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:p1="http://schemas.android.com/apk/res/android"
-    p1:orientation="vertical"
-    p1:layout_width="match_parent"
-    p1:layout_height="match_parent"
-    p1:id="@+id/llMainLayout"
-    p1:minWidth="25px"
-    p1:minHeight="25px"
-    p1:background="#EEEEEE">
-    <FrameLayout
-        p1:minWidth="25px"
-        p1:minHeight="25px"
-        p1:layout_width="match_parent"
-        p1:layout_height="wrap_content"
-        p1:id="@+id/frameLayout1" />
-    <FrameLayout
-        p1:minWidth="25px"
-        p1:minHeight="25px"
-        p1:layout_width="match_parent"
-        p1:layout_height="wrap_content"
-        p1:id="@+id/frameLayout2">
-        <TabWidget
-            p1:minWidth="50px"
-            p1:minHeight="50px"
-            p1:id="@+id/tabWidget1" />
-    </FrameLayout>
-    <Button
-        p1:text="Save"
-        p1:layout_width="match_parent"
-        p1:layout_height="wrap_content"
-        p1:id="@+id/button1" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_gravity="center"
+    android:orientation="vertical"
+    android:background="#eeeeee"
+    tools:context=".LinearLayout">
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:rowCount="1"
+        android:columnCount="3">
+        <Button
+            android:id="@+id/btnProfile"
+            android:text="Profile"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:background="#e53935"
+            android:textStyle="bold"
+            android:textColor="#FFFFFF"
+            android:layout_row="0"
+            android:layout_column="0" />
+        <Button
+            android:id="@+id/btnCourse"
+            android:text="Course"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:background="#e53935"
+            android:textStyle="bold"
+            android:textColor="#FFFFFF"
+            android:layout_row="0"
+            android:layout_column="1" />
+        <Button
+            android:id="@+id/btnEducation"
+            android:text="Education"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:background="#e53935"
+            android:textStyle="bold"
+            android:textColor="#FFFFFF"
+            android:layout_row="0"
+            android:layout_column="2" />
+    </GridLayout>
+    <TextView
+        android:text="Student Name"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000000"
+        android:paddingLeft="50dp"
+        android:id="@+id/studentName"
+        android:layout_width="match_parent"
+        android:layout_height="28.3dp" />
+    <TextView
+        android:text="John Smith"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000000"
+        android:paddingLeft="60dp"
+        android:textStyle="bold"
+        android:id="@+id/lblFirstName"
+        android:layout_width="match_parent"
+        android:layout_height="28.3dp" />
+    <TextView
+        android:text="Preferred First Name"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000000"
+        android:paddingLeft="50dp"
+        android:id="@+id/name"
+        android:layout_width="match_parent"
+        android:layout_height="28.3dp" />
+    <EditText
+        android:inputType="textPersonName"
+        android:layout_marginLeft="50.0dp"
+        android:layout_marginRight="10dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000000"
+        android:background="#fafafa"
+        android:layout_width="313.0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtName" />
+    <TextView
+        android:text="Date of Birth"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000000"
+        android:paddingLeft="50dp"
+        android:id="@+id/birth"
+        android:layout_width="match_parent"
+        android:layout_height="28.3dp" />
+    <TextView
+        android:text="25/04/1015"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000000"
+        android:paddingLeft="60dp"
+        android:textStyle="bold"
+        android:id="@+id/lbldateofbirth"
+        android:layout_width="match_parent"
+        android:layout_height="28.3dp" />
+    <TextView
+        android:text="Gender"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000000"
+        android:paddingLeft="50dp"
+        android:id="@+id/gender"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:id="@+id/genderlayout">
+        <RadioButton
+            android:text="Male"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#000000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/male"
+            android:layout_marginLeft="50.0dp"
+            android:layout_marginRight="10.0dp" />
+        <RadioButton
+            android:text="Female"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#000000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioButton2"
+            android:layout_toRightOf="@+id/female"
+            android:layout_marginLeft="50.0dp"
+            android:layout_marginRight="25.0dp"
+            android:layout_alignParentRight="true" />
+    </RelativeLayout>
+    <TextView
+        android:text="Best Contact Number"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000000"
+        android:paddingLeft="50dp"
+        android:id="@+id/number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <EditText
+        android:inputType="number"
+        android:layout_marginLeft="50.0dp"
+        android:layout_marginRight="10dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000000"
+        android:background="#fafafa"
+        android:layout_width="313.0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtcontactnumber" />
+    <TextView
+        android:text="Status"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000000"
+        android:paddingLeft="50dp"
+        android:id="@+id/status"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:id="@+id/statuslayout">
+        <RadioButton
+            android:text="Permanent"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#000000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/permanent"
+            android:layout_marginLeft="20.0dp"
+            android:layout_marginRight="10.0dp" />
+        <RadioButton
+            android:text="International"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#000000"
+            android:layout_marginRight="25dp"
+            android:layout_toRightOf="@+id/radioButton1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/international"
+            android:layout_marginLeft="40.0dp"
+            android:layout_alignParentRight="true" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:id="@+id/relativeLayout4">
+        <TextView
+            android:text="First Language"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#000000"
+            android:paddingLeft="50dp"
+            android:layout_marginTop="5dp"
+            android:id="@+id/firstlanguage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Spinner
+            android:layout_width="154.3dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#000000"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="25dp"
+            android:background="#fafafa"
+            android:layout_height="25dp"
+            android:layout_alignParentRight="true"
+            android:id="@+id/ddllanguage" />
+        <TextView
+            android:text="Country of Origin"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#000000"
+            android:paddingLeft="50dp"
+            android:layout_marginTop="15dp"
+            android:id="@+id/lblStudentEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/firstlanguage" />
+        <Spinner
+            android:layout_width="154.3dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#000000"
+            android:layout_height="25dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="25dp"
+            android:background="#fafafa"
+            android:layout_below="@+id/ddllanguage"
+            android:layout_alignParentRight="true"
+            android:id="@+id/ddlcountry" />
+    </RelativeLayout>
 </LinearLayout>
