--- a/HELPSMobileFrontEnd/Resources/layout/Login.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/Login.axml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent"
     android:minWidth="25px"
     android:minHeight="25px"
-    android:background="#EEEEEE"
+    android:background="@drawable/background"
     android:id="@+id/llRoot">
     <LinearLayout
         android:orientation="vertical"
@@ -14,27 +14,29 @@
         android:id="@+id/llTextFields"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
-        android:layout_marginTop="90dp">
+        android:layout_marginTop="160dp">
         <EditText
             android:id="@+id/tbStudentID"
             android:inputType="number"
-            android:textColor="@android:color/holo_blue_light"
+            android:textColor="#ff000000"
             android:background="#FFFFFF"
             android:hint="Student ID"
             android:textColorHint="#AAAAAA"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_margin="10dp" />
+            android:layout_margin="10dp"
+            android:maxLength="10" />
         <EditText
             android:id="@+id/tbPassword"
             android:inputType="textPassword"
-            android:textColor="@android:color/holo_blue_light"
+            android:textColor="#ff000000"
             android:hint="Password"
             android:textColorHint="#AAAAAA"
             android:background="#FFFFFF"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_margin="10dp" />
+            android:layout_margin="10dp"
+            android:maxLength="20" />
     </LinearLayout>
     <FrameLayout
         android:minWidth="25px"
@@ -47,7 +49,7 @@
             android:text="Sign into UTS: HELPS"
             android:layout_width="match_parent"
             android:layout_height="60dip"
-            android:background="#E53935"
+            android:background="@drawable/loginbuttongradient"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
             android:layout_gravity="bottom" />
