--- a/HELPSMobileFrontEnd/Resources/layout/MakeBookingList.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/MakeBookingList.axml
@@ -7,5 +7,5 @@
     <ExpandableListView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/ctlExListBox" />
+        android:id="@+id/elvExListBox" />
 </LinearLayout>
